error_templates/java/test_files/unreachable_statement_error/test.txt
template: "Java.UnreachableStatementError"
---
Unreachable.java:5: error: unreachable statement
        System.out.println("c");
        ^
1 error
===
template: "Java.UnreachableStatementError"
---
# UnreachableStatementError
Portions of the code weren't accessible because you returned a value on top of it.

```
        return;
        System.out.println("c");
        ^^^^^^^^^^^^^^^^^^^^^^^
    }
}

```
## Steps to fix
Nothing to fix